added thank you page after msg sent

--- a/thanks.html
+++ b/thanks.html
@@ -146,12 +146,12 @@
     <section class="hero container flex jc-sb">
       <div class="hero__text flex flex-col gap--lg">
         <h1>
-          Contact <emphasis class="text--blue">Sales</emphasis>
+          Thank <emphasis class="text--blue">you!</emphasis>
         </h1>
         <div class="flex flex-col gap--sm">
-          <h3>Have a chat with our experts</h3>
+          <h3>We have received your message!</h3>
           <p class="hero__body hero__body--team">
-            Our sales team will guide you through your options based on your current and future investment goals.
+            Our team will go through the details of your message and get back to you as soon as possible.
           </p>
         </div>
       </div>
@@ -159,62 +159,6 @@
       <div class="hero__img">
         <img src="images/illustrations/contact-chat-bubbles.svg" alt="Chat Bubble Icons">
       </div>
-    </section>
-
-    <section class="form container">
-
-      <form action="https://formsubmit.co/4d1bd24a91670270171d23029f37290f" method="POST" autocomplete="on" enctype="multipart/form-data">
-        <div class="fieldset flex flex-col">
-          <label class="fieldset__label" for="name-input">First Name</label>
-          <input class="fieldset__text" type="text" id="name-input" name="name-input" placeholder="John" required>
-        </div>
-        <div class="fieldset flex flex-col">
-          <label class="fieldset__label" for="surname-input">Last Name</label>
-          <input class="fieldset__text" type="text" id="surname-input" name="surname-input" placeholder="Doe" required>
-        </div>
-        <div class="fieldset flex flex-col">
-          <label class="fieldset__label" for="email-input">Email</label>
-          <input class="fieldset__text" type="email" id="email-input" name="email-input" placeholder="johndoe@example.com" required>
-        </div>
-        <div class="fieldset flex flex-col">
-          <label class="fieldset__label" for="phone-input">Phone</label>
-          <input class="fieldset__text" type="tel" id="phone-input" name="phone-input" placeholder="+5 (555) 555 5555" required>
-        </div>
-        <div class="fieldset flex flex-col">
-          <label class="fieldset__label" for="company-input">Company</label>
-          <input class="fieldset__text" type="text" id="company-input" name="company-input" placeholder="Digital Shovel" required>
-        </div>
-        <div class="fieldset flex flex-col">
-          <label class="fieldset__label" for="country-input">Country</label>
-          <select class="fieldset__select" id="country-input" name="country-input" required>
-            <option value="">Canada</option>
-            <option value="">USA</option>
-          </select>
-        </div>
-        <div class="fieldset fieldset__full-width flex flex-col">
-          <label class="fieldset__label">Purpose of Contact</label>
-          <div class="flex">
-            <input type="radio" name="message" id="message" value="message">
-            <label class="fieldset__radio fieldset__radio--add-bl-radius" for="message">Message</label>
-            <input type="radio" name="order" id="order" value="order">
-            <label class="fieldset__radio fieldset__radio--add-border" for="order">Order</label>
-            <input type="radio" name="both" id="both" value="both">
-            <label class="fieldset__radio fieldset__radio--add-br-radius" for="both">Both</label>
-          </div>
-        </div>
-        <div class="fieldset fieldset__full-width fieldset__order flex flex-col">
-          <label class="fieldset__label" for="order-input">Minipod Order Quantity</label>
-          <input class="fieldset__text" type="number" id="order-input" name="order-input" placeholder="2" required>
-        </div>
-        <div class="fieldset fieldset__full-width fieldset__message flex flex-col">
-          <label class="fieldset__label" for="message-input">Message</label>
-          <textarea class="fieldset__text" type="text" id="message-input" name="contact"
-            placeholder="Tell us more about your project, business needs, and budget." required></textarea>
-        </div>
-        <input type="hidden" name="_next" value="thanks.html">
-        <input class="btn btn--primary btn--form" type="submit">
-      </form>
-
     </section>
 
   </main>
