minor changes to competitor table

--- a/products-minipod.html
+++ b/products-minipod.html
@@ -415,7 +415,7 @@
         <h6>Total Capacity</h6>
         <h6 class="text--blue">300kW</h6>
       </div>
-      <a href="#" class="card-8 btn btn--primary btn--card flex ai-c jc-c gap--sm">Place Order
+      <a href="contact.html" class="card-8 btn btn--primary btn--card flex ai-c jc-c gap--sm">Place Order
         <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
           xmlns="http://www.w3.org/2000/svg">
           <path d="M7.49 6L7.5 6" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
@@ -445,15 +445,6 @@
           <img src="images/illustrations/minipod-back_with-text.svg" alt="Minipod Illustration Back Side">
           <div class="minipod__illustrations--shadow"></div>
         </div>
-        <a href="#" class="btn btn--primary btn--as-c">More Info
-          <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <path d="M7.49 6L7.5 6" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
-              stroke-linejoin="round" />
-            <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
-              stroke-linejoin="round" />
-          </svg>
-        </a>
       </div>
     </section>
 
@@ -554,15 +545,6 @@
             </div>
           </div>
         </div>
-        <a href="#" class="btn btn--primary btn--as-c mtop--xxl">More Info
-          <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <path d="M7.49 6L7.5 6" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
-              stroke-linejoin="round" />
-            <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-100)" stroke-width="2" stroke-linecap="round"
-              stroke-linejoin="round" />
-          </svg>
-        </a>
       </div>
     </section>
 
@@ -814,7 +796,7 @@
           </table>
         </div>
 
-        <a href="#" class="btn btn--primary btn--as-c btn--white mtop--xxl">Place Order
+        <a href="contact.html" class="btn btn--primary btn--as-c btn--white mtop--xxl">Place Order
           <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path d="M7.49 6L7.5 6" />
