added new products to merch page and descriptions

--- a/merch.html
+++ b/merch.html
@@ -142,8 +142,6 @@
 
   <main class="main">
 
-
-
     <section class="hero container flex jc-sb">
       <div class="hero__text flex flex-col gap--lg">
         <h1>
@@ -168,90 +166,128 @@
 
         <li class="merch__grid-item">
           <div class="merch__grid-item-img">
-            <img src="images/photos/merch/weed-grinder.jpg" alt="Digital Shovel Weed Grinder">
+            <img src="images/photos/merch/weed-grinder.png" alt="Digital Shovel Weed Grinder">
           </div>
-          <div class="merch__grid-item-content flex flex-col gap--md">
-            <div class="flex jc-sb">
-              <h5>Weed Grinder</h5>
-              <h6>$25</h6>
+          <div class="merch__grid-item-content flex flex-col jc-sb gap--md">
+            <div class="flex flex-col jc-sb gap--md">
+              <div class="flex jc-sb">
+                <h5>Weed Grinder</h5>
+                <h6>$25</h6>
+              </div>
+              <p>Enjoy your favorite flower with our modern and clean triple-deck grinder, ensuring you catch all that precious keef.</p>
             </div>
-            <p>This is a long description for a merchandise product that we will be selling. It will include information
-              and details regarding its features and specifications.</p>
             <a href="#" class="btn btn--paypal"></a>
           </div>
         </li>
 
         <li class="merch__grid-item">
           <div class="merch__grid-item-img">
-            <img src="images/photos/merch/weed-grinder.jpg" alt="Digital Shovel Weed Grinder">
+            <img src="images/photos/merch/mug.png" alt="Digital Shovel Mug">
           </div>
-          <div class="merch__grid-item-content flex flex-col gap--md">
+          <div class="merch__grid-item-content flex flex-col jc-sb gap--md">
             <div class="flex jc-sb">
-              <h5>Weed Grinder</h5>
-              <h6>$25</h6>
+              <h5>Mug</h5>
+              <h6>$7</h6>
             </div>
-            <p>This is a long description for a merchandise product that we will be selling. It will include information
-              and details regarding its features and specifications.</p>
+            <p>Get a luxurious feeling with your morning coffee, tea, or any of your favorite beverages, using our Digital Shovel mug.</p>
             <a href="#" class="btn btn--paypal"></a>
           </div>
         </li>
 
         <li class="merch__grid-item">
           <div class="merch__grid-item-img">
-            <img src="images/photos/merch/weed-grinder.jpg" alt="Digital Shovel Weed Grinder">
+            <img src="images/photos/merch/lanyard.png" alt="Digital Shovel Lanyard">
           </div>
-          <div class="merch__grid-item-content flex flex-col gap--md">
+          <div class="merch__grid-item-content flex flex-col jc-sb gap--md">
             <div class="flex jc-sb">
-              <h5>Weed Grinder</h5>
-              <h6>$25</h6>
+              <h5>Lanyard</h5>
+              <h6>$3</h6>
             </div>
-            <p>This is a long description for a merchandise product that we will be selling. It will include information
-              and details regarding its features and specifications.</p>
+            <p>Whether you are planning to attend any of our events, or just want to carry something around your neck, try out our lanyards.</p>
             <a href="#" class="btn btn--paypal"></a>
           </div>
         </li>
 
         <li class="merch__grid-item">
           <div class="merch__grid-item-img">
-            <img src="images/photos/merch/weed-grinder.jpg" alt="Digital Shovel Weed Grinder">
+            <img src="images/photos/merch/keychain.png" alt="Digital Shovel Keychain">
           </div>
-          <div class="merch__grid-item-content flex flex-col gap--md">
+          <div class="merch__grid-item-content flex flex-col jc-sb gap--md">
             <div class="flex jc-sb">
-              <h5>Weed Grinder</h5>
-              <h6>$25</h6>
+              <h5>Keychain</h5>
+              <h6>$15</h6>
             </div>
-            <p>This is a long description for a merchandise product that we will be selling. It will include information
-              and details regarding its features and specifications.</p>
+            <p>Slick, shiny, with royal blue vibes, an everyday item that will ensure your keys are not left anywhere unnoticed again.</p>
             <a href="#" class="btn btn--paypal"></a>
           </div>
         </li>
 
         <li class="merch__grid-item">
           <div class="merch__grid-item-img">
-            <img src="images/photos/merch/weed-grinder.jpg" alt="Digital Shovel Weed Grinder">
+            <img src="images/photos/merch/coaster.png" alt="Digital Shovel Coaster">
           </div>
-          <div class="merch__grid-item-content flex flex-col gap--md">
+          <div class="merch__grid-item-content flex flex-col jc-sb gap--md">
             <div class="flex jc-sb">
-              <h5>Weed Grinder</h5>
-              <h6>$25</h6>
+              <h5>Coaster</h5>
+              <h6>$2</h6>
             </div>
-            <p>This is a long description for a merchandise product that we will be selling. It will include information
-              and details regarding its features and specifications.</p>
+            <p>Keep your surfaces clean and safe, while also maintaining a cool aesthetic for your household.</p>
             <a href="#" class="btn btn--paypal"></a>
           </div>
         </li>
 
         <li class="merch__grid-item">
           <div class="merch__grid-item-img">
-            <img src="images/photos/merch/weed-grinder.jpg" alt="Digital Shovel Weed Grinder">
+            <img src="images/photos/merch/pen.png" alt="Digital Shovel Pen">
           </div>
-          <div class="merch__grid-item-content flex flex-col gap--md">
+          <div class="merch__grid-item-content flex flex-col jc-sb gap--md">
             <div class="flex jc-sb">
-              <h5>Weed Grinder</h5>
-              <h6>$25</h6>
+              <h5>Blue Pen</h5>
+              <h6>$5</h6>
             </div>
-            <p>This is a long description for a merchandise product that we will be selling. It will include information
-              and details regarding its features and specifications.</p>
+            <p>Our brand new blue pen will ensure its aesthetic and writing with a professional, high-end, luxurious feel.</p>
+            <a href="#" class="btn btn--paypal"></a>
+          </div>
+        </li>
+
+        <li class="merch__grid-item">
+          <div class="merch__grid-item-img">
+            <img src="images/photos/merch/water-bottle.png" alt="Digital Shovel Water Bottle">
+          </div>
+          <div class="merch__grid-item-content flex flex-col jc-sb gap--md">
+            <div class="flex jc-sb">
+              <h5>Water Bottle</h5>
+              <h6>$19</h6>
+            </div>
+            <p>Our simple water bottle can accompany you to your next workout session, gym grind, or even hiking excursion.</p>
+            <a href="#" class="btn btn--paypal"></a>
+          </div>
+        </li>
+
+        <li class="merch__grid-item">
+          <div class="merch__grid-item-img">
+            <img src="images/photos/merch/socks.png" alt="Digital Shovel Socks">
+          </div>
+          <div class="merch__grid-item-content flex flex-col jc-sb gap--md">
+            <div class="flex jc-sb">
+              <h5>Dress Socks</h5>
+              <h6>$8</h6>
+            </div>
+            <p>Our latest stylish and eccentric sock design. An abstract bitcoin network living on your socks for you to show off.</p>
+            <a href="#" class="btn btn--paypal"></a>
+          </div>
+        </li>
+
+        <li class="merch__grid-item">
+          <div class="merch__grid-item-img">
+            <img src="images/photos/merch/vest.png" alt="Digital Shovel Safety Vest">
+          </div>
+          <div class="merch__grid-item-content flex flex-col jc-sb gap--md">
+            <div class="flex jc-sb">
+              <h5>Safety Vest</h5>
+              <h6>$29</h6>
+            </div>
+            <p>Ensure maximum safety for yourself and/or your employees, without the cost of aesthetics, with our branded safety vests.</p>
             <a href="#" class="btn btn--paypal"></a>
           </div>
         </li>
