removed last names on team page and minor adjustmets

--- a/team.html
+++ b/team.html
@@ -167,45 +167,45 @@
         <h5 class="team__title">Corporate</h5>
         <ul class="team__list flex flex-col gap--md">
           <li class="team__list-member flex gap--sm">
-            <img class="icon--lg" src="images/photos/team/scot.png" alt="Headshot Photograph of Scot Johnson">
+            <img class="icon--lg" src="images/photos/team/scot.png" alt="Headshot Photograph of Scot">
             <div class="team__list-member-details flex flex-col jc-c">
-              <h6>Scot Johnson</h6>
+              <h6>Scot</h6>
               <small>CEO & President</small>
               <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
             </div>
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img class="icon--lg" src="images/photos/team/persia.png" alt="Headshot Photograph of Persia Khodarahmi">
+            <img class="icon--lg" src="images/photos/team/persia.png" alt="Headshot Photograph of Persia">
             <div class="team__list-member-details flex flex-col jc-c">
-              <h6>Persia Khodarahmi</h6>
+              <h6>Persia</h6>
               <small>Operations Manager</small>
               <small class="text--blue fadeIn">"Aaaamaaaazing!"</small>
             </div>
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Scot Johnson">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Manesha">
             <div class="team__list-member-details flex flex-col jc-c">
-              <h6>Manesha Persaud</h6>
+              <h6>Manesha</h6>
               <small>Talent Acquisition Coordinator</small>
               <small class="text--blue fadeIn">My summer consists of puppies & planes</small>
             </div>
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Scot Johnson">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Kai">
             <div class="team__list-member-details flex flex-col jc-c">
-              <h6>Kai Jiang</h6>
+              <h6>Kai</h6>
               <small>Logistics Coordinator</small>
               <small class="text--blue fadeIn">I enjoy anything poker-related</small>
             </div>
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Scot Johnson">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Elisha">
             <div class="team__list-member-details flex flex-col jc-c">
-              <h6>Elisha Porras</h6>
+              <h6>Elisha</h6>
               <small>Administrative Assistant</small>
               <small class="text--blue fadeIn">I can handle spicy food</small>
             </div>
@@ -224,7 +224,6 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Open Position</h6>
               <small>Executive Assistant</small>
-              <small class="text--blue fadeIn">$60k - $75k / yearly</small>
             </div>
           </li>
 
@@ -241,7 +240,6 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Open Position</h6>
               <small>Full Cycle Accountant</small>
-              <small class="text--blue fadeIn">$75k - $95k / yearly</small>
             </div>
           </li>
 
@@ -258,7 +256,6 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Open Position</h6>
               <small>Janitorial Maintenance</small>
-              <small class="text--blue fadeIn">$23 - $25 / hourly</small>
             </div>
           </li>
 
@@ -275,7 +272,6 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Open Position</h6>
               <small>Senior Manufacturing Supervisor</small>
-              <small class="text--blue fadeIn">To be determined</small>
             </div>
           </li>
 
@@ -292,7 +288,6 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Open Position</h6>
               <small>Human Resources Generalist</small>
-              <small class="text--blue fadeIn">To be determined</small>
             </div>
           </li>
         </ul>
@@ -304,9 +299,9 @@
         <h5 class="team__title">Engineering</h5>
         <ul class="team__list flex flex-col gap--md">
           <li class="team__list-member flex gap--sm">
-            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Ben de Vos">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Ben">
             <div class="team__list-member-details flex flex-col jc-c">
-              <h6>Ben de Vos</h6>
+              <h6>Ben</h6>
               <small>Electronics Designer & Team Leader</small>
               <small class="text--blue fadeIn">Undisputed Altium God</small>
             </div>
@@ -314,9 +309,9 @@
 
           <li class="team__list-member flex gap--sm">
             <img class="icon--lg" src="images/photos/team/default-avatar.png"
-              alt="Headshot Photograph of Hugo Rodrigues">
+              alt="Headshot Photograph of Hugo">
             <div class="team__list-member-details flex flex-col jc-c">
-              <h6>Hugo Rodrigues</h6>
+              <h6>Hugo</h6>
               <small>Electronics Designer</small>
               <small class="text--blue fadeIn">Just one more pint of beer</small>
             </div>
@@ -324,9 +319,9 @@
 
           <li class="team__list-member flex gap--sm">
             <img class="icon--lg" src="images/photos/team/default-avatar.png"
-              alt="Headshot Photograph of Noah Chuyu Zhou">
+              alt="Headshot Photograph of Noah">
             <div class="team__list-member-details flex flex-col jc-c">
-              <h6>Noah Chuyu Zhou</h6>
+              <h6>Noah</h6>
               <small>Electronics Designer (MEng)</small>
               <small class="text--blue fadeIn">Ben is not telling the truth</small>
             </div>
@@ -334,9 +329,9 @@
 
           <li class="team__list-member flex gap--sm">
             <img class="icon--lg" src="images/photos/team/default-avatar.png"
-              alt="Headshot Photograph of Prasanth Shunmugam">
+              alt="Headshot Photograph of Prasanth">
             <div class="team__list-member-details flex flex-col jc-c">
-              <h6>Prasanth Shunmugam</h6>
+              <h6>Prasanth</h6>
               <small>Manufacturing / Design Engineer (MEng)</small>
               <small class="text--blue fadeIn">Running & travelling make me smarter</small>
             </div>
@@ -344,18 +339,18 @@
 
           <li class="team__list-member flex gap--sm">
             <img class="icon--lg" src="images/photos/team/default-avatar.png"
-              alt="Headshot Photograph of Hyeseong Choi">
+              alt="Headshot Photograph of Hyeseong">
             <div class="team__list-member-details flex flex-col jc-c">
-              <h6>Hyeseong Choi</h6>
+              <h6>Hyeseong</h6>
               <small>Robotics Engineer</small>
               <small class="text--blue fadeIn">Sparring night every Wed & Fri</small>
             </div>
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Milu Abraham">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Milu">
             <div class="team__list-member-details flex flex-col jc-c">
-              <h6>Milu Abraham</h6>
+              <h6>Milu</h6>
               <small>Embedded Systems Engineer</small>
               <small class="text--blue fadeIn">Car enthusiast and movie buff</small>
             </div>
@@ -363,18 +358,18 @@
 
           <li class="team__list-member flex gap--sm">
             <img class="icon--lg" src="images/photos/team/default-avatar.png"
-              alt="Headshot Photograph of Vahid Mahmoodi">
+              alt="Headshot Photograph of Vahid">
             <div class="team__list-member-details flex flex-col jc-c">
-              <h6>Vahid Mahmoodi</h6>
+              <h6>Vahid</h6>
               <small>FEA / CFD Engineer (PhD)</small>
               <small class="text--blue fadeIn">Never get tired of playing volleyball</small>
             </div>
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Milan Patel">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Milan">
             <div class="team__list-member-details flex flex-col jc-c">
-              <h6>Milan Patel</h6>
+              <h6>Milan</h6>
               <small>Mechanical Design Engineer</small>
               <small class="text--blue fadeIn">Major cinephile</small>
             </div>
@@ -382,9 +377,9 @@
 
           <li class="team__list-member flex gap--sm">
             <img class="icon--lg" src="images/photos/team/default-avatar.png"
-              alt="Headshot Photograph of Mark Kamukama">
+              alt="Headshot Photograph of Mark">
             <div class="team__list-member-details flex flex-col jc-c">
-              <h6>Mark Kamukama</h6>
+              <h6>Mark</h6>
               <small>Mechanical Design Engineer</small>
               <small class="text--blue fadeIn">Football fan, specifically, Liverpool</small>
             </div>
@@ -392,9 +387,9 @@
 
           <li class="team__list-member flex gap--sm">
             <img class="icon--lg" src="images/photos/team/default-avatar.png"
-              alt="Headshot Photograph of Mark Kamukama">
+              alt="Headshot Photograph of Parth">
             <div class="team__list-member-details flex flex-col jc-c">
-              <h6>Parth Patel</h6>
+              <h6>Parth</h6>
               <small>Electronics Technologist</small>
               <small class="text--blue fadeIn">Cricket helps me relax</small>
             </div>
@@ -402,9 +397,9 @@
 
           <li class="team__list-member flex gap--sm">
             <img class="icon--lg" src="images/photos/team/default-avatar.png"
-              alt="Headshot Photograph of Mark Kamukama">
+              alt="Headshot Photograph of Meghal">
             <div class="team__list-member-details flex flex-col jc-c">
-              <h6>Meghal Patel</h6>
+              <h6>Meghal</h6>
               <small>Mechanical Design Engineer (MS)</small>
               <small class="text--blue fadeIn">Adulting is soup and I am a fork</small>
             </div>
@@ -423,7 +418,6 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Open Position</h6>
               <small>Project Engineer</small>
-              <small class="text--blue fadeIn">$75k - $95k / yearly</small>
             </div>
           </li>
 
@@ -440,7 +434,6 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Open Position</h6>
               <small>Robotics Technician</small>
-              <small class="text--blue fadeIn">$45k - $60k / yearly</small>
             </div>
           </li>
         </ul>
@@ -449,9 +442,9 @@
         <ul class="team__list flex flex-col gap--md">
           <li class="team__list-member flex gap--sm">
             <img class="icon--lg" src="images/photos/team/default-avatar.png"
-              alt="Headshot Photograph of Nicholas Panayotakos">
+              alt="Headshot Photograph of Nicholas">
             <div class="team__list-member-details flex flex-col jc-c">
-              <h6>Nicholas Panayotakos</h6>
+              <h6>Nicholas</h6>
               <small>UI / UX Design & Frontend Developer</small>
               <small class="text--blue fadeIn">Passionate about competitive gaming</small>
             </div>
@@ -470,7 +463,6 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Open Position</h6>
               <small>Fullstack Engineer</small>
-              <small class="text--blue fadeIn">$80k - $130k / yearly</small>
             </div>
           </li>
         </ul>
@@ -483,9 +475,9 @@
         <ul class="team__list flex flex-col gap--md">
           <li class="team__list-member flex gap--sm">
             <img class="icon--lg" src="images/photos/team/default-avatar.png"
-              alt="Headshot Photograph of Vishal Monpara">
+              alt="Headshot Photograph of Vishal">
             <div class="team__list-member-details flex flex-col jc-c">
-              <h6>Vishal Monpara</h6>
+              <h6>Vishal</h6>
               <small>PDU Team Leader</small>
               <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
             </div>
@@ -493,9 +485,9 @@
 
           <li class="team__list-member flex gap--sm">
             <img class="icon--lg" src="images/photos/team/default-avatar.png"
-              alt="Headshot Photograph of Amanpreet Singh">
+              alt="Headshot Photograph of Amanpreet">
             <div class="team__list-member-details flex flex-col jc-c">
-              <h6>Amanpreet Singh</h6>
+              <h6>Amanpreet</h6>
               <small>Assembly Team Leader</small>
               <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
             </div>
@@ -503,9 +495,9 @@
 
           <li class="team__list-member flex gap--sm">
             <img class="icon--lg" src="images/photos/team/default-avatar.png"
-              alt="Headshot Photograph of Tirlochan Singh">
+              alt="Headshot Photograph of Tirlochan">
             <div class="team__list-member-details flex flex-col jc-c">
-              <h6>Tirlochan Singh</h6>
+              <h6>Tirlochan</h6>
               <small>Switchgear Team Leader</small>
               <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
             </div>
@@ -513,9 +505,9 @@
 
           <li class="team__list-member flex gap--sm">
             <img class="icon--lg" src="images/photos/team/default-avatar.png"
-              alt="Headshot Photograph of Deepak Sharma">
+              alt="Headshot Photograph of Deepak">
             <div class="team__list-member-details flex flex-col jc-c">
-              <h6>Deepak Sharma</h6>
+              <h6>Deepak</h6>
               <small>Evening Shop Supervisor</small>
               <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
             </div>
@@ -523,9 +515,9 @@
 
           <li class="team__list-member flex gap--sm">
             <img class="icon--lg" src="images/photos/team/default-avatar.png"
-              alt="Headshot Photograph of Austin Cairns">
+              alt="Headshot Photograph of Austin">
             <div class="team__list-member-details flex flex-col jc-c">
-              <h6>Austin Cairns</h6>
+              <h6>Austin</h6>
               <small>Welding Supervisor</small>
               <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
             </div>
@@ -533,18 +525,18 @@
 
           <li class="team__list-member flex gap--sm">
             <img class="icon--lg" src="images/photos/team/default-avatar.png"
-              alt="Headshot Photograph of Brian MacLean">
+              alt="Headshot Photograph of Brian">
             <div class="team__list-member-details flex flex-col jc-c">
-              <h6>Brian MacLean</h6>
+              <h6>Brian</h6>
               <small>Shop Supervisor</small>
               <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
             </div>
           </li>
 
           <li class="team__list-member flex gap--sm">
-            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Andy Igneczi">
+            <img class="icon--lg" src="images/photos/team/default-avatar.png" alt="Headshot Photograph of Andy">
             <div class="team__list-member-details flex flex-col jc-c">
-              <h6>Andy Igneczi</h6>
+              <h6>Andy</h6>
               <small>Shipping & Inventory Supervisor</small>
               <small class="text--blue fadeIn">Enjoys luxury cars and golfing</small>
             </div>
@@ -563,7 +555,6 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Open Position</h6>
               <small>Plant Supervisor</small>
-              <small class="text--blue fadeIn">$65k - $85k / yearly</small>
             </div>
           </li>
 
@@ -580,7 +571,6 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Open Position</h6>
               <small>Heavy Equipment Operator</small>
-              <small class="text--blue fadeIn">$32 - $40 / hourly</small>
             </div>
           </li>
 
@@ -597,7 +587,6 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Open Position</h6>
               <small>Forklift Operator</small>
-              <small class="text--blue fadeIn">$25 - $30 / hourly</small>
             </div>
           </li>
         </ul>
@@ -617,7 +606,6 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Open Position</h6>
               <small>Welder & Fabricator</small>
-              <small class="text--blue fadeIn">$24 - $28 / hourly</small>
             </div>
           </li>
 
@@ -634,7 +622,6 @@
             <div class="team__list-member-details flex flex-col jc-c">
               <h6>Open Position</h6>
               <small>Junior Welder Fitter</small>
-              <small class="text--blue fadeIn">$20 - $22 / hourly</small>
             </div>
           </li>
         </ul>
